# rust-simple-backend

./: Cargo.toml
pages/: index.html  style.css
src/: main.rs
